[package]
name = "memtester"
version = "1.0.0"
authors = ["Tom Gouville <tom.gouville@protonmail.com>"]
description = "A Rust utility to test memory."
license = "GPL-3.0"
edition = "2021"
publish = true


[profile.release]
strip = true
opt-level = 3
lto = true

[[bin]]
bench = false
path = "src/main.rs"
name = "memtester-rs"


[dependencies]
libmemtester = "1.0.0"
clap = { version = "3.2.16", features = ["derive"] }
regex = "1"